SQLite ConnectionString fix fo IIS Express

--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContextConnection": "DataSource=WebApplication.db"
+    "ApplicationDbContextConnection": "DataSource=~\\WebApplication.db"
   }
 }
